<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.AddTodoActivity">

    <EditText
        android:id="@+id/todo_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/todo_desc_hint"/>

    <EditText
        android:id="@+id/todo_notes_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todo_desc_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textMultiLine"
        android:lines="5"
        android:gravity="start"
        android:hint="@string/todo_notes_hint"/>

    <TextView
        android:id="@+id/priorities_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/todo_notes_et"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/todo_priority_hint"
        android:textSize="22sp"/>

    <RadioGroup
        android:id="@+id/priorities_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priorities_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/priority_low_rd"
            android:background="@color/yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_low"/>

        <RadioButton
            android:id="@+id/priority_medium_rd"
            android:background="@color/orange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_medium"/>

        <RadioButton
            android:id="@+id/priority_high_rd"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_high"/>
    </RadioGroup>

    <Button
        android:id="@+id/add_todo_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/priorities_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_todo_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>